# TurboQuant-CLI

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
tests/: test_bench_extract.py  test_daemon.py  test_metrics.py  test_models.py  test_webui.py  test_webui_server.py
tq/: app.py  cli.py
tq/core/: benchmarker.py  binary_probe.py  chat.py  config.py  daemon.py  hardware.py  install_cli.py  installer.py  metrics.py  models.py  server.py  webui.py  webui_server.py
tq/screens/: bench.py  dashboard.py  install.py  models.py  run.py
