[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tq-turboquant"
version = "0.2.0"
description = "Cross-platform CLI/TUI for TurboQuant-enabled llama.cpp workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nolan" }
]
license = { text = "MIT" }
dependencies = [
  "textual>=0.60.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "platformdirs>=4.2.0",
  "httpx>=0.27.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
tq = "tq.cli:main"

[tool.setuptools]
packages = ["tq", "tq.core", "tq.screens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
